Learn History: Deletion Now works.

--- a/app/views/learnhistory.html
+++ b/app/views/learnhistory.html
@@ -38,7 +38,7 @@
 			<label class="control-label col-sm-2" for="iptDate" ng-i18next="Common.Date">Date</label>
 			<div class="input-group col-sm-10">
             	<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="LearnDate" is-open="isDateOpened"            		
-            		datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
+            		datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | i18next}}" />
               	<span class="input-group-btn">
                 	<button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
               	</span>
