--- a/app/views/learnawardlist.html
+++ b/app/views/learnawardlist.html
@@ -1,25 +1,25 @@
 <div id="viewLearnAward">
 	<div class="page-header">
 		<h2>
-			Learn Awards <small ng-i18next="Common.ListView"> List View </small>
+			<span ng-i18next="Learn.LearningAward">Learn Awards</span> <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
-		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
+		<button type="button" class="btn btn-primary" ng-click="newItem()" ng-i18next="Common.New">New</button>
 	</div>
 
 	<table st-table="displayedCollection" st-safe-src="rowCollection"
 		class="table table-striped">
 		<thead>
 			<tr>
-				<th st-sort="id">ID</th>
-				<th st-sort="userid">User ID</th>
-				<th st-sort="displayas">Display As</th>
-				<th st-sort="adate">Date</th>
-				<th st-sort="score">Score</th>
-				<th st-sort="reason">Reason</th>
+				<th st-sort="id" ng-i18next="Common.ID">ID</th>
+				<th st-sort="userid" ng-i18next="Login.User">User ID</th>
+				<th st-sort="displayas" ng-i18next="Login.DisplayAs">Display As</th>
+				<th st-sort="adate" ng-i18next="Common.Date">Date</th>
+				<th st-sort="score" ng-i18next="Learn.Score">Score</th>
+				<th st-sort="reason" ng-i18next="Learn.Reason">Reason</th>
 			</tr>
 			<tr>
 				<th colspan="7"><input st-search="" class="form-control"
-					placeholder="global search ..." type="text" /></th>
+					placeholder="{{'Common.Search' | i18next }}" type="text" /></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -33,15 +33,15 @@
 				<td>
 					<div class="btn-group" role="group">
 						<button type="button" ng-click="displayItem(row)"
-							class="btn-group btn-primary" role="group">
+							class="btn-group btn-primary" role="group" tooltip="{{'Common.Display' | i18next}}">
 							<i class="glyphicon glyphicon-share"> </i>
 						</button>
 						<button type="button" ng-click="editItem(row)"
-							class="btn-group btn-warning" role="group">
+							class="btn-group btn-warning" role="group" tooltip="{{'Common.Edit' | i18next}}">
 							<i class="glyphicon glyphicon-edit"> </i>
 						</button>
 						<button type="button" ng-click="removeItem(row)"
-							class="btn-group btn-danger" role="group">
+							class="btn-group btn-danger" role="group" tooltip="{{'Common.Delete' | i18next}}">
 							<i class="glyphicon glyphicon-trash"> </i>
 						</button>
 					</div>					
