--- a/app/views/learnhistory.html
+++ b/app/views/learnhistory.html
@@ -1,7 +1,7 @@
 <div id="viewLearnHistory" class="container">
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Learn.LearningHistory">Learn History</span><small> {{Activity}}</small>
+			<span ng-i18next="Learn.LearningHistory">Learn History</span><small> {{Activity | i18next}}</small>
 		</h2>
 	</div>
 
