--- a/app/views/learnhistorylist.html
+++ b/app/views/learnhistorylist.html
@@ -4,6 +4,7 @@
 			<span ng-i18next="Learn.LearningHistory">Learn Histories</span> <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
+		<button type="button" class="btn btn-primary" ng-click="refreshList()" ng-i18next="Common.Refresh">Refresh</button>
 	</div>
 
 	<table st-table="displayedCollection" st-safe-src="rowCollection"
