--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,28 +5,32 @@
 
     <ul class="list-group">
       <li class="list-group-item list-group-item-info"><span class="badge">3</span>1. Empty content in TinyMCE?</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">4</span>2. Learn Category Combo: Hierarchy or adding leading blanks?</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>3. Learn Object Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>4. Learn History Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>5. Learn Award Create.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>6. Learn Award Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>7. Learn Award Delete.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">1</span><strike>8. Default Template instead of real 'default'?</strike></li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">2</span>9. Current Template marked in the menu 'Themes'.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">2</span>10. Current Language marked in the menu 'Languages'.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>11. Finance Account Create.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>12. Finance Account Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>13. Finance Account Delete.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>14. Finance Document Create.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>15. Finance Document Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>16. Finance Document Delete.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>17. Finance Control Center Create.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>18. Finance Control Center Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>19. Finance Control Center Delete.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>20. Finance Internal Order Create.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>21. Finance Internal Order Change.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">5</span>22. Finance Internal Order Delete.</li>
-      <li class="list-group-item list-group-item-warning"><span class="badge">1</span>23. Random chose the theme during the start?</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span>2. Learn Category Combo: Hierarchy or adding leading blanks?</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>3. Learn Object Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>4. Learn History Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>5. Learn Award Create.</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>6. Learn Award Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>7. Learn Award Delete.</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">1</span><strike>8. Default Template instead of real 'default'?</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">2</span>9. Current Template marked in the menu 'Themes'.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">2</span>10. Current Language marked in the menu 'Languages'.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>11. Finance Account Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>12. Finance Account Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>13. Finance Account Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>14. Finance Document Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>15. Finance Document Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>16. Finance Document Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>17. Finance Control Center Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>18. Finance Control Center Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>19. Finance Control Center Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>20. Finance Internal Order Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>21. Finance Internal Order Change.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span>22. Finance Internal Order Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">1</span>23. Random chose the theme during the start?</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span>24. Deletion confirm dialog's language!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span>25. Learn History List Refresh!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span>26. Learn Award List Refresh!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span>27. Learn Object List Refresh!</li>
       <li class="list-group-item list-group-item-danger"><span class="badge">3</span>Others</li>
     </ul>
   </div>
