Change Smart-Table to UI-Grid.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -28,9 +28,10 @@
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>22. Finance Internal Order Delete.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">1</span>23. Random chose the theme during the start?</li>
       <li class="list-group-item list-group-item-info"><span class="badge">4</span>24. Deletion confirm dialog's language!</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span>25. Learn History List Refresh!</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span>26. Learn Award List Refresh!</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span>27. Learn Object List Refresh!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>25. Learn History List Refresh!</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>26. Learn Award List Refresh!</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>27. Learn Object List Refresh!</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">35</span>28. Average score in Learn Award!</li>
       <li class="list-group-item list-group-item-danger"><span class="badge">3</span>Others</li>
     </ul>
   </div>
