--- a/app/views/home.html
+++ b/app/views/home.html
@@ -150,9 +150,7 @@
 	                        <ul class="dropdown-menu">
 								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li>
 								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
-								<li><a target="_blank" href="http://www.tinymce.com/">Select2</a></li>
 								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
 								<li><a target="_blank" href="http://i18next.com/">i18next</a></li>
 								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
@@ -167,14 +165,15 @@
 								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
+								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">CDNs</li>
 								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
-								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Others</li>
-								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid in Angular UI</a></li>
 								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
+								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
+								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 	                        </ul>
 	                    </li>
 	                    <li><a href="#/about"><span ng-i18next="Nav.About">About</span></a></li>
