--- a/app/views/learnobjectlist.html
+++ b/app/views/learnobjectlist.html
@@ -8,6 +8,7 @@
 		<button type="button" class="btn btn-primary" ng-click="refreshList()" ng-i18next="Common.Refresh">Refresh</button>
 	</div>
 
+	<div id="grid1" ui-grid="gridOptions" ui-grid-cellNav ui-grid-resize-columns ui-grid-pinning ui-grid-selection ui-grid-move-columns ui-grid-grouping class="grid"></div>
 	<table st-table="displayedCollection" st-safe-src="rowCollection"
 		class="table table-striped">
 		<thead>
