Change from the i18next to angular translate.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financeaccountcategorylist.html
+++ b/app/views/financeaccountcategorylist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			Finance Account Category<small ng-i18next="Common.ListView"> List View </small>
+			Finance Account Category<small translate="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
