--- a/app/views/learncategorylist.html
+++ b/app/views/learncategorylist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Learn.LearningCategory">Learn Category</span> <small ng-i18next="Common.ListView"> List View </small>
+			<span translate="Learn.LearningCategory">Learn Category</span> <small translate="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
@@ -13,13 +13,13 @@
 		class="table table-striped">
 		<thead>
 			<tr>
-				<th st-sort="id" ng-i18next="Common.ID">ID</th>
-				<th st-sort="parent" ng-i18next="Common.Parent">Parent ID</th>
-				<th st-sort="text" ng-i18next="Common.Text">Text</th>
-				<th st-sort="comment" ng-i18next="Common.Comment">Comment</th>
+				<th st-sort="id" translate="Common.ID">ID</th>
+				<th st-sort="parent" translate="Common.Parent">Parent ID</th>
+				<th st-sort="text" translate="Common.Text">Text</th>
+				<th st-sort="comment" translate="Common.Comment">Comment</th>
 			</tr>
 			<tr>
-				<th colspan="4"><input st-search="" class="form-control" placeholder="{{'Common.Search' | i18next }}" 
+				<th colspan="4"><input st-search="" class="form-control" placeholder="{{'Common.Search' | translate }}" 
 					type="text" /></th>
 			</tr>
 		</thead>
