--- a/app/views/userdetail.html
+++ b/app/views/userdetail.html
@@ -2,8 +2,8 @@
 	<table st-table="displayedCollection" class="table table-striped">
 		<thead>
 			<tr>
-				<th st-sort="userobj" ng-i18next="Common.Object">Object</th>
-				<th st-sort="usercont" ng-i18next="Common.Content">Content</th>
+				<th st-sort="userobj" translate="Common.Object">Object</th>
+				<th st-sort="usercont" translate="Common.Content">Content</th>
 			</tr>
 		</thead>
 		<tbody>
