--- a/app/views/financeaccounthierarchy.html
+++ b/app/views/financeaccounthierarchy.html
@@ -2,10 +2,10 @@
 
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Finance.Accounts">Finance Accounts</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
+			<span translate="Finance.Accounts">Finance Accounts</span> <small translate="Common.HierarchyView"> Hierarchy View </small>
 		</h2>
-		<button type="button" class="btn btn-primary" ng-click="newItem()" ng-i18next="Common.Create">New</button>
-		<button type="button" class="btn btn-primary" ng-click="refreshHierarchy()" ng-i18next="Common.Refresh">Refresh</button>
+		<button type="button" class="btn btn-primary" ng-click="newItem()" translate="Common.Create">New</button>
+		<button type="button" class="btn btn-primary" ng-click="refreshHierarchy()" translate="Common.Refresh">Refresh</button>
 	</div>
 	
 	<div class="panel-body">
