--- a/app/views/financedocumenttypelist.html
+++ b/app/views/financedocumenttypelist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			Finance Document Type <small ng-i18next="Common.ListView"> List View </small>
+			Finance Document Type <small translate="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
