--- a/app/views/learnobjectlist.html
+++ b/app/views/learnobjectlist.html
@@ -2,10 +2,10 @@
 
 	<div class="page-header">
 		<h2>
-            <span ng-i18next="Learn.LearningObject">Learn Objects</span> <small ng-i18next="Common.ListView"> List View </small>
+            <span translate="Learn.LearningObject">Learn Objects</span> <small translate="Common.ListView"> List View </small>
 		</h2>
-		<button type="button" class="btn btn-primary" ng-click="newItem()" ng-i18next="Common.New">New</button>
-		<button type="button" class="btn btn-primary" ng-click="refreshList()" ng-i18next="Common.Refresh">Refresh</button>
+		<button type="button" class="btn btn-primary" ng-click="newItem()" translate="Common.New">New</button>
+		<button type="button" class="btn btn-primary" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
 	</div>
 
 	<div id="grid1" ui-grid="gridOptions"
