--- a/app/views/register.html
+++ b/app/views/register.html
@@ -1,33 +1,29 @@
 <div id="viewRegister">
 	<form class="form-register" name="registerForm">
-        <h2 class="form-register-heading" ng-i18next="Login.RegisterTitle">Register an user</h2>
+        <h2 class="form-register-heading" translate="Login.RegisterTitle">Register an user</h2>
 
-		<label for="inputUser" class="sr-only">User name</label> 
-        <input id="inputUser" class="form-control" placeholder="{{ 'Login.User' | i18next }}"
+	<label for="inputUser" class="sr-only">User name</label> 
+        <input id="inputUser" class="form-control" placeholder="{{ 'Login.User' | translate }}"
                ng-model="registerInfo.username" required autofocus> 
         
-        <label
-			for="inputPassword" class="sr-only">Password</label> 
+        <label for="inputPassword" class="sr-only">Password</label> 
         <input type="password" id="inputPassword" class="form-control"
-               ng-model="registerInfo.password" placeholder="{{ 'Login.Password' | i18next }}" required>
+               ng-model="registerInfo.password" placeholder="{{ 'Login.Password' | translate }}" required>
 
-		<label for="inputConfirmPassword" class="sr-only">Confirm
-			Password</label> 
+	<label for="inputConfirmPassword" class="sr-only">Confirm Password</label> 
         <input type="password" id="inputConfirmPassword"
-			class="form-control" ng-model="registerInfo.confirmpassword"
-			placeholder="{{ 'Login.ConfirmedPassword' | i18next}}" required> 
+		class="form-control" ng-model="registerInfo.confirmpassword"
+		placeholder="{{ 'Login.ConfirmedPassword' | translate }}" required> 
         
-        <label
-			for="inputMail" class="sr-only">Mailbox</label> 
-        <input type="email"
-			id="inputMail" class="form-control" ng-model="registerInfo.mailbox"
-			placeholder="{{ 'Login.Email' | i18next }}" required>
+        <label for="inputMail" class="sr-only">Mailbox</label> 
+        <input type="email" id="inputMail" class="form-control" ng-model="registerInfo.mailbox"
+			placeholder="{{ 'Login.Email' | translate }}" required>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit"
-                ng-disabled="registerForm.$invalid" ng-click="submitRegister()" ng-i18next="Login.Register">
+                ng-disabled="registerForm.$invalid" ng-click="submitRegister()" translate="Login.Register">
             Register
         </button>
-        <button class="btn btn-lg btn-block" ui-sref="login" ng-i18next="Common.Cancel">Cancel</button>
+        <button class="btn btn-lg btn-block" ui-sref="login" translate="Common.Cancel">Cancel</button>
 	</form>
 </div>
 
