--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,6 +1,6 @@
 <div id="viewWelcome">
 	<div class="jumbotron">
-		<h1><span ng-i18next="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h1>
+		<h1><span translate="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h1>
 		<p>
 			This is a home page. <br /> It shall contains some descriptions.<br />
 			And it hasn't been done yet.
@@ -10,7 +10,7 @@
 		</p>
 		<p>
 			<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
-				role="button"><span ng-i18next="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
+				role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
 		</p>
 	</div>
 </div>
