Continue the movement.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -148,6 +148,7 @@
 	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Acknowledgements">Acknowledgements</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
+								<li class="dropdown-header">Libraries</li>
 								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li>
 								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
@@ -156,6 +157,7 @@
 								<li><a target="_blank" href="http://t4t5.github.io/sweetalert/">Sweet Alert</a></li>
 								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
 								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">bootswatch</a></li>
+								<li><a target="_blank" href="https://angular-translate.github.io/">Angular Translate</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
@@ -169,7 +171,6 @@
 								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Others</li>
-								<li><a target="_blank" href="https://angular-translate.github.io/">Angular Translate</a></li>
 								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
